[package]
name = "shader_tool"
version = "0.1.0"
authors = ["delskayn <mees.delzenne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
shaderc = "0.7.1"
serde = "1.0.123"
json5 = "0.3.0"
notify = "5.0.0-pre.6"
serde_derive = "1.0.124"
anyhow = "1.0.38"
env_logger = "0.8.3"
log = "0.4.14"
imgui = "0.7.0"
imgui-winit-support = "0.7.0"
wgpu = "0.7.0"
futures = "0.3.12"
bytemuck = "1.5.0"
spirv-reflect = "0.2.3"
