[package]
name = "shadertool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.30.0"
egui = {version = "0.13.1", features = ["mint"]}
egui_glium = "0.13.1"
serde = "1.0.123"
serde_json = "1.0.62"
ron = "0.6.4"
anyhow = "1.0.38"
notify = "5.0.0-pre.6"
glam = {version = "0.13.0", features=["serde"]}
env_logger = "0.8.3"
log = "0.4.14"
