[package]
name = "shadertool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.31"
egui = {version = "0.17", features = ["mint"]}
egui_glium = "0.17"
serde = "1.0"
serde_json = "1.0"
ron = "0.7"
anyhow = "1.0"
notify = "5.0.0-pre.13"
glam = {version = "0.13.0", features=["serde"]}
env_logger = "0.9"
log = "0.4"
image = "0.23"
